--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@
     font-family:'Poppins', sans-serif;
     background-color: black;
     color:white;
+    cursor:crosshair;
 }
 
 html, body{
@@ -39,11 +40,11 @@ header ul{
 
 header ul a {
     color:white;
-    font-weight: 400;
+    font-weight:500;
 }
 
 header ul li:nth-child(2) a{
-    padding:1rem 1.5rem;
+    padding:1rem 1.2rem;
     border-radius:50px;
     background:linear-gradient(90deg, #2F82FF 0%, #40EEF9 80.67%);
     box-shadow: 0px 0px 15px #2F82FF;
@@ -78,8 +79,9 @@ main h2{
 .booking__form{
     font-size:0.7rem;
     display: grid;
-    grid-template-columns: 250px 250px 150px 150px 200px 1fr;
+    grid-template-columns: 25% 25% 10% 10% 15% 1fr;
     align-items: center;
+    width:90%;
     gap:15px;
     padding:1.5rem;
     border-style:solid;
@@ -91,6 +93,7 @@ main h2{
 .booking__form button{
     cursor:pointer;
     padding:1.5rem;
+    width:70px;
     display:flex;
     align-items: center;
     justify-content: center;
@@ -109,7 +112,6 @@ main h2{
     font-weight: 500;
     display:flex;
     flex-direction: column;
-
 }
 
 .input__container input{
@@ -134,16 +136,16 @@ main h2{
     color:#969696;
 }
 
-/* 
-.departure__and__destination{
-    max-width:250px;
-}
+@media (max-width:37.5em){
+    body{
+    }
 
-.dates{
-    max-width:150px;
-}
+    header{
+        justify-content: space-between;
+        padding:2rem 1.2rem;
+    }
 
-.passengers__and__class{
-    max-width:200px;
-} 
-*/
+    header ul{
+        gap:20px;
+    }
+}
