--- a/src/App.css
+++ b/src/App.css
@@ -23,34 +23,24 @@ html, body{
     
 }
 header{
-    font-size:0.9rem;
+    font-size:0.8rem;
     display:flex;
-    flex-direction: column;
     justify-content: space-between;
     align-items:center;
-    padding:2rem 0;
-    gap:20px;
+    padding:1.5rem 1rem;
 }
 
 header ul{
     list-style: none;
-    position:fixed;
-    bottom: 0;
     display:flex;
-    background-color: black;
-    border:1px solid #242424;
+    justify-content: center;
+    align-items: center;
     border-radius:50px;
-    gap:40px;
-    padding:1.2rem;
 }
 
-header ul a {
+header ul li a{
     color:white;
-    font-weight:400;
-}
-
-header ul li:nth-child(2) a{
-    padding:0.8rem;
+    padding:0.7rem;
     border-radius:50px;
     background:linear-gradient(90deg, #2F82FF 0%, #40EEF9 80.67%);
     box-shadow: 0px 0px 15px #2F82FF;
@@ -58,12 +48,10 @@ header ul li:nth-child(2) a{
 
 .header__logo{
     color:white;
-    font-size:0.7rem;
-    font-weight: 100;
+    font-size:0.5rem;
     display:flex;
     flex-direction: column;
     align-items: center;
-    gap:0px;
 }
 
 .header__logo svg{
@@ -75,30 +63,31 @@ main{
     flex-direction: column;
     justify-content:center;
     align-items: center;
-    gap:5rem;
-    flex-grow:1;
+    gap:10rem;
+    flex:1;
 }
 
 main h2{
     font-size:1.4rem;
-    font-weight:500;
+    font-weight:400;
     text-align: center;
-    margin-top:2rem;
-    padding:1rem;
+    margin-top:4rem;
+    padding:2rem;
 }
 
 .booking__form{
+    position:relative;
     font-size:0.7rem;
     display: grid;
-    grid-template-columns: 5% 5% 5% 5% 5%;
+    grid-template-columns: 1fr;
     align-items: center;
-    width: 80%;
+    width:90%;
     gap:15px;
     padding:1.5rem;
     border-style:solid;
-    border-width: 2px;
+    border-width: 1px;
     border-color:#1f1f1f;
-    border-radius:50px;
+    border-radius:15px;
 }
 
 .booking__form button{
@@ -119,6 +108,51 @@ main h2{
     fill: white;
 }
 
+.filters__form{
+    color:white;
+    position:absolute;
+    top: -45px;
+    display:flex;
+    justify-content: space-between;
+    width:100%;
+    gap:25px;
+    font-weight:500;
+}
+
+.filters__form span{    
+    border-radius: 15px;
+    padding:0.4rem 0.5rem;
+}
+
+.filters__form div{
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    gap:15px;
+}
+
+.filter__myflights{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    gap:5px;
+    background:linear-gradient(90deg, #2F82FF 0%, #40EEF9 80.67%);
+    box-shadow: 0px 5px 20px rgba(47, 130, 255, 0.4);
+}
+
+
+.filters__form svg{
+    fill:white;
+    height:20px;
+    width:20px;
+}
+
+.filter__myflights svg{
+    fill:white;
+    height:20px;
+    width:20px;
+}
+
 .input__container{
     font-weight: 500;
     display:flex;
@@ -126,6 +160,7 @@ main h2{
 }
 
 .input__container input{
+    width:100%;
     color:rgb(177, 177, 177);
     font-family: "Poppins", sans-serif;
     font-size:0.8rem;
