--- a/src/App.css
+++ b/src/App.css
@@ -108,6 +108,13 @@ main h2{
     fill: white;
 }
 
+.button__container{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    margin-top:1.5rem;
+}
+
 .filters__form{
     color:white;
     position:absolute;
@@ -157,6 +164,7 @@ main h2{
     font-weight: 500;
     display:flex;
     flex-direction: column;
+    gap:5px;
 }
 
 .input__container input{
@@ -164,11 +172,10 @@ main h2{
     color:rgb(177, 177, 177);
     font-family: "Poppins", sans-serif;
     font-size:0.8rem;
-    border-style: none;
+    border:1px solid #1f1f1f;
     border-radius:10px;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.05);
     padding:0.7rem;
-    background-color: #1a1a1a;
 }
 
 .input__container input:focus{
@@ -178,6 +185,26 @@ main h2{
 
 .input__container input::placeholder{
     font-size:0.9em;
-    font-weight:400;
+    font-weight:300;
     color:#969696;
 }
+
+#departure{
+    background: url(assets/departure.svg) 10px no-repeat;
+    text-indent: 3ch;
+}   
+
+#arrival{
+    background: url(assets/arrival.svg) 10px no-repeat;
+    text-indent: 3ch;
+}   
+
+#outbound, #return{
+    background: url(assets/calendar.svg) 10px no-repeat;
+    text-indent: 3ch;
+}   
+
+#passengers_class{
+    background: url(assets/passengers.svg) 10px no-repeat;
+    text-indent: 3ch;
+}   
