added imgs title and footer

--- a/src/App.css
+++ b/src/App.css
@@ -124,12 +124,29 @@ main h2{
 }
 
 .img-container{
-    height:90px;
-    width:140px;
+
 }
 
 .img-container img{
     border-radius: 5px;
-    height:100%;
-    width:100%;
+    height:90px;
+    width:140px;
+}
+
+
+.img-title{
+    font-size:0.6rem;
+    font-weight:300;
+    background-color: rgba(0, 0, 0, 0.7);
+    border-radius:10px;
+}
+
+footer{
+    font-size:0.7rem;
+    font-weight: 300;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    padding-top:6rem;
+    padding-bottom:4rem;
 }
