--- a/src/App.css
+++ b/src/App.css
@@ -242,6 +242,9 @@ footer{
     font-weight:400;
     height: 45px;
     width:280px;
+    background-image: url(/src/assets/plane.svg);
+    background-position: right 10px center;
+    background-repeat: no-repeat;
     background-color:#000;
     color: #c2c2c2;
     border:none;
@@ -288,6 +291,9 @@ footer{
     border:none;
     border-radius:10px;
     color: #c2c2c2;
+    background-image: url(/src/assets/calendar.svg);
+    background-position: right 10px center;
+    background-repeat: no-repeat;
     background-color:#000;
     text-indent:2ch;
 }
